--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="CSS/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <script src="js/holaMundo.js"></script>
+    <!--<script src="js/holaMundo.js"></script>-->
     <img src="images/backend.png" alt="">
 </body>
 </html>
